Don't allow multiple radiobuttons to be checked on default.

BUG:161272

svn path=/trunk/KDE/kdelibs/; revision=932558